<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dark Mode Switch</string>
    <string name="title_instructions_before_use">Instructions before use</string>
    <string name="tv_instructions_before_use">
        \nPlease read this notice calmly\n
        \nThe dark mode in this App is only to switch a UI state of the Android system
        \nThe display in the dark mode requires the application to adapt itself (the system interface is the same)
        \nIt is not related to this App whether other applications adapt or not and the situation of their adaptation\n
        \nThis App has the following work modes
        \n1.Normal mode：The availability of it is determined by the system
        \n2.Compatible mode：requires ADB authorization
        \n3.Root mode\n
        \nSome devices may be automatically turned off dark mode by the system when turning on dark mode.Only then need to turn on Steady switch dark mode\n
        \nAndroid 10 and above can attempts to switch force dark with Root.
        \nThis App provides tiles, widgets, static shortcuts,pinned shortcuts and setting assistant applications to quickly switch.\n
    </string>
    <string name="checkbox1_instructions_before_use">It is not the problem of this App that the system interface or other applications do not turn dark after using this App to turn on dark mode</string>
    <string name="checkbox2_instructions_before_use">I have fully understood</string>
    <string name="checkbox3_instructions_before_use">Some applications set restrictions on the dark mode of the following system for different devices</string>
    <string name="checkbox4_instructions_before_use">It is their adaptation problem that their interface is not darken or abnormal</string>
    <string name="checkbox_last_instructions_before_use">No longer prompt</string>
    <string name="CarMode">Car Mode</string>
    <string name="name_switch_force_dark">Force Dark Switch</string>
    <string name="name_switch_battery_saver">Battery Saver Switch</string>
    <string name="StableMode">Steady switch dark mode</string>
    <string name="title_dialog_EnableStableMode">Turn on Steady switch dark mode</string>
    <string name="message_dialog_EnableStableMode">In general, Steady switch dark mode does not need to be turned on. It only needs to be turned on when the dark mode is turned on and automatically turned off by the system.\n\nEach time you switch dark mode, click \" Refresh\" in the menu to update the theme of this App.</string>
    <string name="tip_on_force_dark">Force Dark: ON</string>
    <string name="tip_off_force_dark">Force Dark: OFF</string>
    <string name="tip_str1_is_str2">%1$s: %2$s</string>
    <string name="tip_on">ON</string>
    <string name="tip_off">OFF</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="title_dark_mode">Dark Mode</string>
    <string name="title_force_dark">Force Dark</string>
    <string name="WorkMode">Work Mode</string>
    <string name="WorkMode1">Normal</string>
    <string name="WorkMode2">Compatible</string>
    <string name="WorkMode3">Root</string>
    <string name="on">ON </string>
    <string name="off">OFF </string>
    <string name="yes2">%1$s Success\n\nReboot the device to take effect</string>
    <string name="yes2old">%1$s Success\n\nReboot the device and enable car mode to take effect</string>
    <string name="tips_workmode2">Reboot the device to take effect</string>
    <string name="failworkmode">The current system cannot use %1$s mode is unavailable!Please try other mode</string>
    <string name="error">Error %1$s</string>
    <string name="no_root">Unable to acquire root access</string>
    <string name="tip_needpermission_WRITE_SETTINGS">Please grant permission</string>
    <string name="tip_needpermission_WRITE_SECURE_SETTINGS">Please grant Root permission or grant permissions using\n%1$s\nIt has been copied to the clipboard</string>
    <string name="tip_needpermission">Please grant permissions using\n%1$s\nIt has been copied to the clipboard</string>
    <string name="tip_switch_what1_need_android_what2">Switching %1$s requires Android %2$sand above</string>
    <string name="title_timingswitch">Timing Switch</string>
    <string name="title_timeup_on">Start time</string>
    <string name="title_timeup_off">End time</string>
    <string name="checkbox_enable_bugReport">Allow tracking bugs through network for optimization and improvement</string>
    <string name="title_general">General</string>
    <string name="title_advanced">Advanced</string>
    <string name="title_excludeFromRecents">Exclude from recents</string>
    <string name="summary_excludeFromRecents">Not displayed in the recent app list after exiting the app</string>
    <string name="title_battery_saver">Battery Saver</string>
    <string name="title_permanent_notification">Permanent Notification</string>
    <string name="title_others">Others</string>
    <string name="title_help">Help</string>
    <string name="title_about">About</string>
    <string name="rate">Rate</string>
    <string name="title_Introduction">What\'s this</string>
    <string name="desc_Introduction">Switch the dark mode of Android system and some system displays conveniently,Support Android 4.1+.\nXposed function is also provided (can remove the restrictions of some applications on dark mode related functions, currently supports QQ,WeChat,Coolapk,DingTalk,Iflytek inputmethod and See inputmethod by default)</string>
    <string name="title_developer">Developer</string>
    <string name="desc_developer">Developer</string>
    <string name="title_certification">Certification</string>
    <string name="title_green_apps">Comply to “Convention of Green Apps for Android”</string>
    <string name="title_other_works">Other Works</string>
    <string name="name_install_lion">Install Lion</string>
    <string name="desc_install_lion">Provide multiple installers to install APK and uninstall apps silently without root or using root</string>
    <string name="name_unblock_darkmode">Unblock Dark Mode</string>
    <string name="desc_unblock_darkmode">As a stand-alone application to replace the xposed function of this application, unlock the dark mode of more applications</string>
    <string name="title_licenses">About Open Source</string>
    <string name="License_MulanPSL_2">MulanPSL 2.0</string>
    <string name="xposeddescription">Removed the restrictions on the dark mode of the following system in some applications.(Need custom configuration).</string>
    <string name="uptateSun">Click to update time according to sunrise and sunset</string>
    <string name="tip_need_access_Location_info">Need to allow access to location information</string>
    <string name="tip_fail_getLocation">Failed to get location</string>
    <string name="tip_success_getLocation">update completed</string>
    <string name="title_second_confirm">Confirm before switching</string>
    <string name="message_second_confirm">The reason why you see this dialog is that you have not confirmed \"No longer prompt\" in the \"Instructions before use\".\n\nPlease confirm again: the dark mode must apply its own adaptation, otherwise the application will not change after switching which is considered \"invalid\" by some users</string>
    <string name="tip_cannotSwitchBatterySaver">Cannot switch Battery Saver at this time</string>
    <string name="title_system_display">System display</string>
    <string name="title_invert_colors">Invert Colors</string>
    <string name="title_invertcolors">Invert Colors</string>
    <string name="title_gray_scale">Grayscale</string>
    <string name="title_night_display">Night Light</string>
    <string name="name_switch_invert_colors">Invert Colors Switch</string>
    <string name="name_switch_gray_scale">Grayscale Switch</string>
    <string name="name_switch_night_display">Night Light Switch</string>
    <string name="summary_night_display">Tinting screen amber</string>
    <string name="hello" translatable="false" tools:ignore="UnusedResources">Hello, stranger.This sentence was written on 2020.5.7. You found me, haha. Please enjoy your life and live well!</string>
    <string name="title_oneplus_settings">Oneplus settings</string>
    <string name="title_oneplus_synchronize_theme">Switch system theme synchronously</string>
    <string name="summary_oneplus_synchronize_theme">Switch system theme synchronously when switching the dark mode（need Root）</string>
    <string name="title_oneplus_use_colorful_theme">Use colorful theme when turning off dark mode</string>
    <string name="summary_oneplus_use_colorful_theme">Use colorful theme</string>
    <string name="title_xfeature">Xposed settings</string>
    <string name="check_xfeature_ok">Xposed is in effect</string>
    <string name="title_switch_screen_off">Switch only when the screen is off</string>

</resources>
