<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/title_general">
        <SwitchPreferenceCompat
            app:key="stablemode"
            app:title="@string/StableMode" />
        <SwitchPreferenceCompat
            app:key="batterySaver"
            app:title="@string/title_batterySaver" />
        <Preference
            app:key="timeup"
            app:title="@string/title_timingswitch" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/title_advanced">
        <SwitchPreferenceCompat
            app:key="carmode"
            app:title="@string/CarMode" />
        <SwitchPreferenceCompat
            app:key="permanentNotification"
            app:title="@string/title_permanentNotification" />
        <SwitchPreferenceCompat
            app:key="excludeFromRecents"
            app:summary="@string/summary_excludeFromRecents"
            app:title="@string/title_excludeFromRecents" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_others">
        <Preference
            app:key="instructions_before_use"
            app:title="@string/title_instructions_before_use" />
        <Preference
            app:key="help"
            app:title="@string/title_help" />
        <Preference
            app:key="about"
            app:title="@string/title_about" />
    </PreferenceCategory>

</PreferenceScreen>