<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory>
        <SwitchPreferenceCompat
            app:key="enableTimingSwitch"
            app:title="@string/title_dark_mode" />
        <Preference
            app:key="timeOn"
            app:title="@string/title_timeup_on" />
        <Preference
            app:key="timeOff"
            app:title="@string/title_timeup_off" />
    </PreferenceCategory>
    <PreferenceCategory
        app:isPreferenceVisible="false"
        app:key="TimingSwitch2">
        <SwitchPreferenceCompat
            app:key="enableTimingSwitch2"
            app:title="@string/title_force_dark" />
        <Preference
            app:key="timeOn2"
            app:title="@string/title_timeup_on" />
        <Preference
            app:key="timeOff2"
            app:title="@string/title_timeup_off" />
    </PreferenceCategory>

</PreferenceScreen>